#####################
Changelog for Collage
#####################

Collage 1.2.0 SVN trunk
=======================

https://svn.plone.org/collective/Collage/trunk

    (name of developer listed in brackets)


Collage 1.2.0 beta 1
====================

https://svn.plone.org/collective/Collage/tags/1.2.0beta1

* Removed useles Folder and Plone Site types setups.
  [glenfant]

* Added a skin demo for portlets
  [glenfant]

* Code cleanup with pyflakes
  [glenfant]

* Registering skin with ZCML
  [glenfant]

* Version is now 3 digits (major.minor.bugfix) as most components.
  [glenfant]

* Extensions/* (Install script) is now useless. Removed
  [glenfant]

* Removed meta_type attr in GS profile when not creating
  objects. (potentially harmful according to MArtin Aspeli)
  [glenfant]

* Defining "view" variables in templates is harmful. Renamed to
  kssview (generally)
  [glenfant]

* For  reason I can't understand, templates macros for KSS editing
  only work when in a <span metal:define-macro ...> or a <div
  metal:define-macro ...>
  [glenfant]

* We must set each fied in its own macro in the xx_portlet.pt views
  otherwise KSS screams.
  [glenfant]

* Made portlets skinnable (reintroduced some of the zegor branch)
  [glenfant]

* Fixed unicode error in clipboard's title (reintroduced fix from
  zegor branch).
  [glenfant]

* I hate tabs for indenting (removed in every file I needed to change)
  [glenfant]

* Some easy code refactorings: the trunk does not support Plone 2.x
  and older versions any more.
  [glenfant]

* Added some markups for i18ndude in Python.
  [glenfant]

* Moved (and added) tests to "tests" directory.
  [glenfant]

* Making templates ready for i18ndude that found malformed stuffs when
  ZPT is more tolerant.
  [glenfant]

* Made split- and expand-icons transparent
  [malthe]

* Added clickable link view.

* Simplified view class names.
  [malthe]

* Removed annotations hack (we now expect content to be IAnnotatable).
  [malthe]
