@@ -15,6 +15,9 @@ Collage 1.2.0 beta 1
 
 https://svn.plone.org/collective/Collage/tags/1.2.0beta1
 
+* Added a GenericSetup upgrade step to 1.2.0.
+  [glenfant]
+
 * Removed useles Folder and Plone Site types setups.
   [glenfant]
 
